   and Rob Heittman.
 - ChallengeRequests with a null realm are properly formatted. Reported by Sumit Lohia.
 - The message logged when an authentication scheme is not supported by NRE is now only 
   of FINE level instead of WARNING level. Reported by Sumit Lohia.
 - Guard.getSecrets() method was not properly synchronized. Reported by Tim Peierls.
 
[Enhancements] 
 - Clarified ConverterService Javadocs. Suggested by Justin Makeig.
 - Clarified the dependencies in the "lib/readme.txt" file. Reported by Mike Leary.
 - Updated javadocs in order to precise crucial apache HTTPClient behaviour. Reported by 
   Nicolas Capdevila.

1.0.5 (2007-09-06)
[Bugs fixed]
 - Potential NPE in REST book example (ch7, UserResource). Reported by Marc Portier.
 - Potential NPE during KeyStore initialization for Simple HTTPS connector. Report by Quintin May.
 - Transmit the Component dispatcher to the ServletContextAdapter. Reported by Mike Moran.
 - Fixed bug in the DirectoryResource when looking for variant references. Reported by Mike Moran.
 - Fixed address binding issue with Simple HTTP/HTTPS connectors. Patch contributed by Alex Milowski.
 - Fixed potential NPE in Restlet.getContext() method. Patch contributed by Alex Milowski.
 - Fixed potential NPE in SecurityUtils. Patch contributed by Alex Milowski.
 - When a component is restarted, the new applications and virtual hosts are no taken into account. 
   Patch from Alex Milowski.
 - Relaxed media-type equality test in ch7/BookmarkResource#put method. Reported by Katrin.
 - Fixed bug when decoding percent-encoded sequences in lowercase (see rfc 3986, chapter 2.1). 
   Reported by Paul Kaiser and contributed by Rob Heittman.

[Enhancements] 
 - Clarified the Javadocs for the Variant's "identifier" property. Reported by Joe Holloway.
 - Clarified the Javadocs for the Resource.getVariants() method. Suggested by John D. Mitchell.
 - An exception is not thrown anymore when the Etag can not be successfully parsed.